src/test/run-pass/issues/issue-43205.rs
// run-pass
fn main() {
   &&[()][0];
   println!("{:?}", &[(),()][1]);
}
