src/test/compile-fail/extenv-too-many-args.rs
// error-pattern:malformed #env call

fn main() { #env[~"one", ~"two"]; }
